<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item 
		android:id="@+id/menueImport"
		android:title="@string/menueImport"
		android:icon="@drawable/ic_menu_download" 
	/>
	<item 
		android:id="@+id/menueExport"
		android:title="@string/menueExport"
		android:icon="@drawable/ic_menu_upload" 
	/>
	<item 
		android:id="@+id/menueEinstellungen"
		android:title="@string/menueEinstellungen"
		android:icon="@android:drawable/ic_menu_preferences" 
	/>
	<item 
		android:id="@+id/menueHilfe"
		android:title="@string/menueHilfe"
		android:icon="@android:drawable/ic_menu_help" 
	/>
	<item 
		android:id="@+id/menueNeu"
		android:title="@string/menueNeu"
		android:icon="@android:drawable/ic_menu_add" 
	/>
	<item 
		android:id="@+id/menueZurueck"
		android:title="@string/menueZurueck"
		android:icon="@android:drawable/ic_menu_close_clear_cancel" 
	/>        
</menu>