<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="40dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:paddingTop="2dip"
    android:stretchColumns="1"
    android:background="@drawable/background_header">
    <TableRow>
	    <Button 
	    	android:id="@+id/buttonBackTitlebar"
	    	android:text="@string/buttonZurueck"
	    	android:onClick="onClickButtonBackTitlebar"
	    	style="@style/SchaltflaecheBack"
	    />
	    
		<TextView  
			android:id="@+id/textViewTitlebar"
			android:gravity="center"
		    android:layout_height="wrap_content" 
		    android:text="@string/app_name"
		    android:textSize="15dip"
		    android:textColor="@color/textfarbe"
	    />
	    
	    <Button 
	    	android:id="@+id/buttonPreferencesTitlebar"
	    	android:text="@string/buttonPreferencesMenu"
	    	android:onClick="onClickButtonPreferencesTitlebar"
	    	style="@style/SchaltflaechePreferences"
	    />
    </TableRow>
</TableLayout>
