<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
>
    <ScrollView 
    	android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
	    >
		    <TextView  
		    	android:id="@+id/gewichtEingeben"
		    	style="@style/TextStyleUeberschrift"
		    	android:layout_gravity="center_horizontal"
		    	android:text="@string/gewichtEingeben"
		    />
		    <TextView  
		    	android:id="@+id/gewichtEingebenInfo"
		    	style="@style/TextStyleNormal"
		    	android:layout_gravity="center_horizontal"
		    	android:text="@string/gewichtEingebenInfo"
		    />
		    
		    <TextView  
		   		android:id="@+id/gewichtEingabeDatum" 
		    	style="@style/TextStyleLabel"
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" 
		    	android:text="@string/gewichtEingabeDatum"
		    />
		    <EditText 
		    	style="@style/EditTextStyle"
		    	android:id="@+id/editTextDatum"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:focusableInTouchMode="false"
		    />
		    
		    <TextView  
		    	style="@style/TextStyleLabel"
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" 
		    	android:id="@+id/textViewGewicht"
		    	android:text="@string/gewichtEingabeGewicht"
		    />
		    <EditText 
		    	style="@style/EditTextStyle"
		    	android:id="@+id/editTextGewicht"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:digits="0123456789.,"
		    	android:inputType="phone"
		    />
		    
		    
		    <ImageView
		    	xmlns:android="http://schemas.android.com/apk/res/android"
			    style="@style/StyleSeparator"
			    android:id="@+id/imageViewAnteile"
		    />
			<LinearLayout 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
		    >
			    <TextView  
			    	android:layout_width="fill_parent" 
			    	android:layout_height="wrap_content" 
			    	android:id="@+id/textViewFettanteil"
			    	android:text="@string/gewichtEingabeFettanteil"
			    	android:layout_weight="1"
			    	android:gravity="center"
			    />
			    <TextView  
			    	android:layout_width="fill_parent" 
			    	android:layout_height="wrap_content" 
			    	android:id="@+id/textViewWasseranteil"
			    	android:text="@string/gewichtEingabeWasseranteil"
			    	android:layout_weight="1"
			    	android:gravity="center"
			    />
			    <TextView  
			    	android:layout_width="fill_parent" 
			    	android:layout_height="wrap_content" 
			    	android:id="@+id/textViewMuskelanteil"
			    	android:text="@string/gewichtEingabeMuskelanteil"
			    	android:layout_weight="1"
			    	android:gravity="center"
			    />
			</LinearLayout>
			<LinearLayout 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
		    >		    
			    <EditText 
			    	style="@style/EditTextStyle"
			    	android:id="@+id/editTextFettanteil"
			    	android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:digits="0123456789.,"
			    	android:inputType="phone"
			    	android:visibility="gone"
			    	android:layout_weight="1"
			    />
			    <EditText 
			    	style="@style/EditTextStyle"
			    	android:id="@+id/editTextWasseranteil"
			    	android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:digits="0123456789.,"
			    	android:inputType="phone"
			    	android:visibility="gone"
			    	android:layout_weight="1"
			    />
			    <EditText 
			    	style="@style/EditTextStyle"
			    	android:id="@+id/editTextMuskelanteil"
			    	android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:digits="0123456789.,"
			    	android:inputType="phone"
			    	android:visibility="gone"
			    	android:layout_weight="1"
			    />
			</LinearLayout>    
		    
		    <TextView  
		    	style="@style/TextStyleLabel"
		    	android:id="@+id/textViewBmiLabel"
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" 
		    	android:text="@string/gewichtEingabeBmi"
		    	android:visibility="gone"
		    />
		    <TextView  
		    	style="@style/TextStyleNormal"
		    	android:id="@+id/textViewBmi"
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" 
		    	android:visibility="gone"
		    />
		    <Button 
		    	android:id="@+id/buttonGewichtHinzufuegen"
		    	android:text="@string/buttonGewichtHinzufuegen"
		    	android:onClick="onClickButtonGewichtHinzufuegen"
		    	style="@style/Schaltflaeche"
		    />
	    </LinearLayout>
    </ScrollView>
</LinearLayout>
