<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:padding="6dip" 
	android:orientation="vertical"
>
	<TextView 
		android:id="@+id/toptext" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_weight="2"
		android:singleLine="true" 
		android:gravity="center_vertical"
	/>
	<TextView 
		android:id="@+id/gewichttext"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_weight="1" 
		android:singleLine="true" 
		android:ellipsize="marquee"
	/>
	<TextView 
		android:id="@+id/bmitext"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_weight="3" 
		android:singleLine="true" 
	/>
	
	<ImageView
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    style="@style/StyleSeparator"
	    android:id="@+id/imageViewAnteile"
    />
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
    >
        <TextView
            android:text="@string/fettanteil"
            android:id="@+id/textViewFettanteilLabel"
            android:gravity="center"
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
            android:layout_weight="1"
        />
        <TextView
            android:text="@string/wasseranteil"
            android:id="@+id/textViewWasseranteilLabel"
            android:gravity="center"
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
            android:layout_weight="1" 
        />
        <TextView
            android:text="@string/muskelanteil"
            android:id="@+id/textViewMuskelanteilLabel"
            android:gravity="center"
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
            android:layout_weight="1"
        />
	</LinearLayout>
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
    >
        <TextView
            android:id="@+id/textViewFettanteil"
            android:gravity="center"
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
            android:layout_weight="1"
        />
        <TextView
            android:id="@+id/textViewWasseranteil"
            android:gravity="center"
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
            android:layout_weight="1" 
        />
        <TextView
            android:id="@+id/textViewMuskelanteil"
            android:gravity="center"
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
            android:layout_weight="1"
        />
	</LinearLayout>
</LinearLayout>